Update dependencies and enhance tiers payant dossier management. Changed bucket4j dependency to a newer version and updated related API documentation. Modified use cases for marking and rejecting dossiers to include new parameters, and added a new endpoint for creating dossiers from sales. Improved alert resolution methods and refactored code for better clarity and efficiency.